syntax = "proto3";
package sample; 

option go_package = "github.com/lcmaguire/protoc-gen-lazy-proxy/proto/sample";

service SampleService {
    rpc Sample(SampleRequest) returns (SampleResponse);
}

message SampleRequest {
    string name = 1;
}

message SampleResponse {
    string name = 1;
}